Fix background size bug

--- a/src/input.css
+++ b/src/input.css
@@ -34,3 +34,9 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+@media (width > 648px) {
+  body {
+    background-size: contain;
+  }
+}
