Change background for #root

--- a/src/input.css
+++ b/src/input.css
@@ -46,4 +46,6 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  background-image: url("../public/images/bg-stars.svg");
+  background-repeat: repeat;
 }
